# ESP32_meteoControlStation

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  meteoCS.config  meteoCS.files  meteoCS.includes  reciveData.txt  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  RF24.h  ST7735.c  ST7735.h  bme280.c  bme280_ok.c  bme_i2c.c  bme_i2c.h  component.mk  csevent.c  csevent.h  decode_image.c  decode_image.h  display.c  display.h  display_gui.c  display_gui.h  display_logo.c  esp32-rf24.c  esp32-rf24.h  flash.c  flash.h  gpioDEF.h  images.c  images.h  ipgeolocation.c  ipgeolocation.h  main.c  mh-z19.c  mh-z19.h  net.c  net.h  nrf24l01.c  nrf24l01.h  nrf24l01_2.c  nrf24l01_hal.h  openWeather.c  openWeather.h  tft.c  (+3 more)
main/esp_request/: esp_request.c
main/old/: ST7735.c  ST7735.h  bme280.c  bme280_old.c  bme280_old.h  i2c.c  i2c.h
main/st7735/: spi.c  spi.h  st7735.c  st7735.h
main/tft/: tftfunc.h
main/tft2/: spi_master.c  spi_master.h  tftfunc.c
main/weather/: common_functions.c  common_functions.h
